--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+.main-bg {
+  height: 300px;
+  background-image: url('./img/헤드백그라운드.png');
+  background-size: cover;
+  background-position: center;
+
+}
+
+
+
+
 .App {
   text-align: center;
 }
